<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrayBg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/classic_image"
            android:textColor="@color/textColor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTackPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/take_photo" />

        <include layout="@layout/line" />

        <TextView
            android:id="@+id/tvSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/photo_album" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel" />

</LinearLayout>