<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/toolbar_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:id="@+id/toolbar_tv_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/toolbar_iv_back"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:text="@string/sure"
            android:textColor="@color/c_d02934"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F4F4F4" />

    <EditText
        android:id="@+id/etNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/modification_group_notice_hint"
        android:minHeight="122dp"
        android:padding="10dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvtips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/only_group_master_modify" />

    </LinearLayout>

</LinearLayout>