<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/page_title_left_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/title_bar_back"
            android:tint="@color/textColor" />

        <TextView
            android:id="@+id/page_title_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_detail"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F4F4F4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_toolbar"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMore"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_member"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/group_chat_more_ic"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:padding="11dp"
                    android:text="@string/group_chat_more"
                    android:textColor="#8d8d8d"
                    android:textSize="14sp" />

            </LinearLayout>
            <!--群成员-->
            <com.tencent.qcloud.uikit.business.chat.group.view.widget.InScrollGridView
                android:id="@+id/group_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:numColumns="5"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"
                app:layout_constraintTop_toBottomOf="@id/llMore" />

            <LinearLayout
                android:id="@+id/llGroupChatName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/group_members">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_name"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/group_chat_more_ic"
                    android:gravity="right"
                    android:padding="11dp"
                    android:textColor="#8d8d8d"
                    android:textSize="14sp"
                    tools:text="@string/group_chat_more" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlGroupChatFaceIcon"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llGroupChatName">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_avatar"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/ivEnd"
                    android:src="@drawable/group_chat_header_ic" />

                <ImageView
                    android:id="@+id/ivEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="11dp"
                    android:src="@drawable/group_chat_more_ic" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llGroupBroadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/rlGroupChatFaceIcon">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="11dp"
                    android:paddingTop="18dp"
                    android:text="@string/group_broadcast"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/rlContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvGroupBroadcastContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="40dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:paddingStart="11dp"
                        android:paddingBottom="12dp"
                        android:textColor="#8d8d8d"
                        tools:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="11dp"
                        android:src="@drawable/group_chat_more_ic" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlNoDisturb"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/llGroupBroadcast">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_msg_no_disturb"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbNoDisturb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="11dp"
                    android:button="@drawable/nearby_city_set_top_cb_selector"
                    android:checked="false" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlGroupChatTop"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/rlNoDisturb">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_top"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbChatTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="11dp"
                    android:button="@drawable/nearby_city_set_top_cb_selector"
                    android:checked="false" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llNickname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rlGroupChatTop">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_my_nickname"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvGroupNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/group_chat_more_ic"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:padding="11dp"
                    android:textColor="#8d8d8d"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:text="@string/in_group_nick_name" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlMemberNickname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/llNickname">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="11dp"
                    android:text="@string/group_chat_show_member_nickname"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbMemberNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="11dp"
                    android:button="@drawable/nearby_city_set_top_cb_selector"
                    android:checked="false" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvChatClear"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingStart="11dp"
                android:text="@string/group_chat_clear"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/rlMemberNickname" />

            <TextView
                android:id="@+id/tvExitChat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/exit_chat"
                android:textColor="@color/c_d02934"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvChatClear" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>

